Corrected disfunction on Firefox and inspired code from thumbnail...

--- a/cms/static/js/jquery/jquery-ui-noviusos/css/jquery.nos.mp3grid.scss
+++ b/cms/static/js/jquery/jquery-ui-noviusos/css/jquery.nos.mp3grid.scss
@@ -190,42 +190,12 @@
 	}
 
     td.wijgridtd {
-        button {
-            height: 18px;
-        }
-
-        &.full-occupation {
-            position: relative;
-            overflow: visible;
-
-            .wijmo-wijgrid-innercell {
-                overflow: visible;
-            }
-
-            button {
-                position: absolute;
-                top: 0px;
-                left: 0px;
-                width: 100%;
-                height: 100%;
-                margin: 0px;
-                padding: 0px;
-
-                border-radius: 0px;
-                border: 0px;
-
-                .ui-button-text {
-                    padding: 0px;
-                    text-align: center;
-                }
+        &.buttontd {
+            text-align: center;
+            cursor: pointer;
+            .ui-icon-triangle-1-s {
+                margin: auto;
             }
         }
-    }
-}
-.nos-adds {
-    .ui-icon {
-        display: inline-block;
-        vertical-align: -1px;
-        margin-right: 6px;
     }
 }
